// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`java.util.ArrayList, getestet mit 'LehrerListeEintrag' > toArray: returns given array with elements 1`] = `
[
  LehrerListeEintrag {
    "id": 0,
    "istAenderbar": false,
    "istRelevantFuerStatistik": false,
    "istSichtbar": false,
    "kuerzel": "",
    "nachname": "",
    "personTyp": "",
    "sortierung": 0,
    "titel": null,
    "vorname": "",
  },
  2,
  3,
]
`;

exports[`java.util.ArrayList, getestet mit 'Number' > toArray: returns given array with elements 1`] = `
[
  Number {},
  2,
  3,
]
`;

exports[`java.util.ArrayList, getestet mit 'String' > toArray: returns given array with elements 1`] = `
[
  String {
    "0": "a",
  },
  2,
  3,
]
`;

exports[`java.util.ArrayList, getestet mit 'TestPerson' > toArray: returns given array with elements 1`] = `
[
  TestPerson {
    "id": 0,
    "kuerzel": "",
    "nachname": "",
    "titel": null,
    "vorname": "",
  },
  2,
  3,
]
`;
